api/crates/postgres/tests/integration/media/snapshots/integration__media__fetch_by_tag_ids_with_sources__asc_succeeds.snap
---
source: crates/postgres/tests/integration/media/fetch_by_tag_ids_with_sources.rs
expression: ctx.queries()
---
[[queries]]
sql = '''
SELECT
  "id",
  "created_at",
  "updated_at"
FROM
  "media"
INNER JOIN
  "media_tags" ON "media_tags"."medium_id" = "media"."id"
INNER JOIN
  "tag_paths" ON "tag_paths"."descendant_id" = "media_tags"."tag_id"
WHERE
  ("ancestor_id", "tag_type_id") IN (($1, $2))
GROUP BY
  "id"
HAVING
  COUNT(DISTINCT ("ancestor_id", "tag_type_id")) = $3
ORDER BY
  "media"."created_at" ASC,
  "media"."id" ASC
LIMIT
  $4'''
rows_affected = 3
rows_returned = 3

[[queries]]
sql = '''
SELECT
  "medium_id",
  "source_id",
  "sources"."external_metadata" AS "source_external_metadata",
  "sources"."external_metadata_extra" AS "source_external_metadata_extra",
  "sources"."created_at" AS "source_created_at",
  "sources"."updated_at" AS "source_updated_at",
  "external_services"."id" AS "external_service_id",
  "external_services"."slug" AS "external_service_slug",
  "external_services"."kind" AS "external_service_kind",
  "external_services"."name" AS "external_service_name",
  "external_services"."base_url" AS "external_service_base_url",
  "external_services"."url_pattern" AS "external_service_url_pattern"
FROM
  "media_sources"
INNER JOIN
  "sources" ON "sources"."id" = "media_sources"."source_id"
INNER JOIN
  "external_services" ON "external_services"."id" = "sources"."external_service_id"
WHERE
  "media_sources"."medium_id" IN ($1, $2, $3)
ORDER BY
  "media_sources"."medium_id" ASC,
  "external_services"."slug" ASC,
  "sources"."external_metadata" ASC'''
rows_affected = 5
rows_returned = 5
